src/test/ui/hrtb/hrtb-perfect-forwarding.stderr
error: implementation of `Bar` is not general enough
  --> $DIR/hrtb-perfect-forwarding.rs:43:5
   |
LL |     foo_hrtb_bar_not(&mut t);
   |     ^^^^^^^^^^^^^^^^ implementation of `Bar` is not general enough
   |
   = note: `T` must implement `Bar<&'0 isize>`, for any lifetime `'0`...
   = note: ...but it actually implements `Bar<&'1 isize>`, for some specific lifetime `'1`

error: implementation of `Bar` is not general enough
  --> $DIR/hrtb-perfect-forwarding.rs:43:5
   |
LL |     foo_hrtb_bar_not(&mut t);
   |     ^^^^^^^^^^^^^^^^ implementation of `Bar` is not general enough
   |
   = note: `T` must implement `Bar<&'0 isize>`, for any lifetime `'0`...
   = note: ...but it actually implements `Bar<&'1 isize>`, for some specific lifetime `'1`

error: aborting due to 2 previous errors

